2006-09-27  David Bateman  <dbateman@free.fr>

	* file-io.cc (Fsprintf): If fmt is an sq_string, return an sq_string.

	* DLD-FUNCTIONS/sparse.cc (spfind, sparse_find): Delete.
	* DLD-FUNCTIONS/spfind.cc: New file implementating compatible
	sparse find function.
	* Makefile.in (DLD_XSRC): Add spfind.cc.
	
2006-09-26  Bill Denney  <bill@givebillmoney.com>

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx, Ffind):
	Handle direction and limit on number of elements to find.

2006-09-26  John W. Eaton  <jwe@octave.org>

	* error.cc (warning_1): Call error_2, not error.

2006-09-15  John W. Eaton  <jwe@octave.org>

	* ops.h (DEFSTRDBLCONVFN): New arg, TFROM.
	* OPERATORS/op-double-conv.cc: Declare and install sq_string
	conversions too.

	* ov-base-int.cc (octave_base_int_scalar<T>::convert_to_str_internal,
	octave_base_int_matrix<T>::convert_to_str_internal):
	New functions.
	* ov-base-int.h: Provide decls.

2006-09-15  Soren Hauberg  <soren@hauberg.org>.

	* data.cc (Fsize): If nargout > ndims, fill with 1.

2006-09-15  John W. Eaton  <jwe@octave.org>

	* octave.cc: Fix xerbla decl.

2006-09-13  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/cellfun.cc: Improve error message for uniform
	output case when results are not scalars.  Avoid shadow decls.

2006-09-13  David Bateman <dbateman@free.fr>

	* ov-scalar.h (octave_scalar::sparse_matrix_value,
	octave_scalar::sparse_complex_matrix_value): New extractor functions.
	* ov-complex.h (octave_complex::sparse_matrix_value,
	octave_complex::sparse_complex_matrix_value): Ditto.
	* DLD-FUNCTIONS/spkron.cc (Fspkron): Change example in help.

2006-09-12  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Allow matlab compatiable
	'UniformOutput' and 'ErrorHandler' options.  Change output when
	called with function handler or inline function to by default have
	'UniformOutput' set to true.  Allow functions with multiple inputs
	and outputs. Add test code.  Replace some int with octave_idx_type.